--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,12 @@ dependencies:
     sdk: flutter
   firebase_core: ^4.0.0
   firebase_auth: ^6.0.1
+  flutter_modular: ^6.4.1
+  dio: ^5.9.0
+  fpdart: ^1.1.1
+  equatable: ^2.0.7
+  pretty_dio_logger: ^1.4.0
+
 
 dev_dependencies:
   flutter_test:
