--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,12 @@
 {
-  "dart.flutterSdkPath": ".fvm/versions/3.35.1"
+  "dart.flutterSdkPath": ".fvm/versions/3.35.1",
+  "search.exclude": {
+    "**/.fvm": true
+  },
+  "files.watcherExclude": {
+    "**/.fvm": true
+  },
+  "dart-barrel-file-generator.excludeFileList": [
+    "**/app_text_theme.dart"
+  ]
 }
