--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,12 +16,17 @@ dependencies:
   fpdart: ^1.1.1
   equatable: ^2.0.7
   pretty_dio_logger: ^1.4.0
+  bloc: ^9.0.0
+  flutter_bloc: ^9.1.1
 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  integration_test:
+    sdk: flutter
   flutter_lints: ^5.0.0
+  mocktail: ^1.0.4
 
 flutter:
   uses-material-design: true
